--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
 version: '3'
 
 services:
-  product-service: 
-  # Here goes the compose config for Product API Service
-
+  product-service:
+    build: ./ProductService
+    volumes:
+      - ./ProductService:/usr/src/app
+    ports:
+      - 8080:80
+    
   webpro-panel:
-  # And here you can configure the WebPro Panel
+    image: php:5.6.36-apache
+    volumes:
+      - ./WebProPanel:/var/www/html
+    ports:
+      - 8888:80
+    depends_on:
+      - product-service
